--- a/style.css
+++ b/style.css
@@ -584,7 +584,7 @@ h1 {
     margin-bottom: 60px;
   }
 
-  .program .block div {
+  .program .block article {
     height: 200px;
     width: 14vw;
     background: rgba(255, 255, 255, 0.1);
@@ -600,7 +600,7 @@ h1 {
     height: 40px;
   }
 
-  .program .block div img {
+  .program .block article img {
     width: 50px;
     display: block;
     margin: auto;
@@ -627,9 +627,12 @@ h1 {
     margin-top: 7px;
   }
 
-  .block .active {
-    /* border: 3px solid #e6e4e5; */
+  /* .block .active {
     box-shadow: 0 0 0 3px #e6e4e5 inset;
+  } */
+  .block article:hover {
+    box-shadow: 0 0 0 3px #e6e4e5 inset;
+    cursor: pointer;
   }
 
   .featured-speakers {
